Made rower picker.

--- a/app/app.scss
+++ b/app/app.scss
@@ -1,3 +1,12 @@
 .center {
     text-align: center;
 }
+
+.glyphicon {
+    color: #555;
+}
+
+.form-output {
+    display: inline-block;
+    margin: 7px 13px;
+}
