--- a/app/components/trips/trips-log.html
+++ b/app/components/trips/trips-log.html
@@ -1,4 +1,5 @@
-<h1>Add trip</h1>
+<rower-picker></rower-picker>
+
 <div class="row">
     <div class="col-xs-6">
         <div class="radio" ng-repeat="description in ctrl.descriptions">
@@ -15,7 +16,7 @@
 
 <div class="form-group">
     <h2 class="center">{{ctrl.newTrip.distance}} km</h2>
-    <input type="range" ng-model="ctrl.newTrip.distance" step="1" min="1" max="20">
+    <input type="range" ng-model="ctrl.newTrip.distance" step="1" min="1" max="{{ctrl.maxDistance}}">
 </div>
 
 <div class="form-group">
