--- a/app/app.scss
+++ b/app/app.scss
@@ -1,12 +1,28 @@
-.center {
+.align-center {
     text-align: center;
+}
+.align-left {
+    text-align: left;
+}
+.align-right {
+    text-align: right;
 }
 
 .glyphicon {
     color: #555;
 }
 
-.form-output {
-    display: inline-block;
-    margin: 7px 13px;
+body {
+    background-color: #fafafa;
+}
+
+.heading {
+    text-align: center;
+    font-size: 25px;
+    padding: 5px;
+    margin-bottom: 15px;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+    border-bottom: 1px solid #ddd;
+    background-color: #f5f5f5;
 }
