--- a/app/app.scss
+++ b/app/app.scss
@@ -26,3 +26,33 @@ body {
     border-bottom: 1px solid #ddd;
     background-color: #f5f5f5;
 }
+
+.radio {
+    input[type=radio] {
+        display: none;
+    }
+
+    label {
+        padding: 0;
+        display: block;
+    }
+
+    div {
+        padding: 5px;
+    }
+
+    input[type=radio]:checked + div,
+    input[type=radio]:checked + div span {
+        color: #fff;
+        background-color: #337ab7;
+        border-radius: 4px;
+    }
+
+    input {
+        background-color: transparent;
+        outline: none;
+        border: 0;
+        width: 80%;
+        border-bottom: 1px solid #ccc;
+    }
+}
