--- a/app/components/description/description-picker.html
+++ b/app/components/description/description-picker.html
@@ -1,15 +1,12 @@
 <div class="radio" ng-repeat="description in ctrl.descriptions">
-    <label><input ng-model="ctrl.selected" type="radio" value="{{description}}">{{description}}</label>
+    <label><input ng-model="ctrl.selected" type="radio" value="{{description}}"><div>{{description}}</div></label>
 </div>
-
 <div class="radio">
     <label>
         <input ng-model="ctrl.selected" value="custom" type="radio">
-        <div class="input-group">
-            <input class="form-control" placeholder="Something else..." ng-focus="ctrl.selected = 'custom'" ng-model="ctrl.custom">
-            <div class="input-group-btn">
-                <button class="btn btn-default"><span class="glyphicon glyphicon-pushpin"></span></button>
-            </div>
+        <div>
+            <input placeholder="Description..." ng-focus="ctrl.selected = 'custom'" ng-model="ctrl.custom">
+            <span class="glyphicon glyphicon-pushpin"></span>
         </div>
     </label>
 </div>
